se modifica practica 1 de laboratorio y se adiciona el punto 8

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-/build
+/build-Practica1_Info2-Desktop_Qt_6_1_2_MinGW_64_bit-Debug
+/build-Practica2_Info2-Desktop_Qt_6_1_2_MinGW_64_bit-Debug
+/build-Practica3_Info2-Desktop_Qt_6_1_2_MinGW_64_bit-Debug
+/build-Practica4_Info2-Desktop_Qt_6_1_2_MinGW_64_bit-Debug
+/build-Practica5_Info2-Desktop_Qt_6_1_2_MinGW_64_bit-Debug
+/build-Practica6_Info2-Desktop_Qt_6_1_2_MinGW_64_bit-Debug
